fixed alignments and css

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 * {
     box-sizing: border-box;
     outline: 2px solid black;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -12,6 +14,7 @@ body {
     text-align: center;
     justify-content: center;
     align-content: center;
+    margin-top: 25%;
 }
 
 .main-salmon {
@@ -19,17 +22,17 @@ body {
 }
 
 .salmonpic {
-    display: flex;
+    display: flexbox;
     max-width: 300px;
     max-height: auto;
-    align-content: center;
-    padding-left: 6em;
+    margin: 2em;
+    justify-content: center;
 }
 
 .salmon-directions {
     display: flexbox;
     text-align: left;
-    margin: 2 auto;
+    margin-left: .5em;
 }
 
 .pancakes {
@@ -60,4 +63,23 @@ body {
 .ingredients-salmon {
     list-style-type: none;
     font: 22px bolder;
+}
+
+footer {
+    padding-right: 1em;
+    margin-top: 1em;
+    text-align: right;
+    font-size: larger;
+}
+
+.main-salmon h1 {
+    padding: .5em;
+}
+
+.pancakes-home {
+    text-align: center;
+}
+
+.pancakes {
+    margin-top: 1em;
 }
